REST Api (continue)
