# server/doc/api-doc.json
@@ -13,7 +13,7 @@
       "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
     }
   },
-  "host": "server.adailyclock.com",
+  "host": "api.adailyclock.com",
   "basePath": "/api",
   "schemes": [
     "https"
@@ -90,7 +90,7 @@
             }
           },
           "400": {
-            "description": "Invalid ID supplied"
+            "description": "Error occurred"
           },
           "404": {
             "description": "User not found"
@@ -143,7 +143,7 @@
             "description": "Invalid ID supplied"
           },
           "404": {
-            "description": "Product not found"
+            "description": "User or Product not found"
           }
         },
         "security": [
@@ -151,16 +151,14 @@
             "api_key": []
           }
         ]
-      }
-    },
-    "/product": {
-      "post": {
+      },
+      "patch": {
         "tags": [
           "product"
         ],
-        "summary": "Create new product",
+        "summary": "Update product",
         "description": "",
-        "operationId": "createProduct",
+        "operationId": "updateProduct",
         "produces": [
           "application/json"
         ],
@@ -188,18 +186,34 @@
         }
       }
     },
-    "/product/{productId}": {
-      "patch": {
+    "/product": {
+      "post": {
         "tags": [
           "product"
         ],
-        "summary": "Update product",
+        "summary": "Create new product",
         "description": "",
-        "operationId": "updateProduct",
+        "operationId": "createProduct",
         "produces": [
           "application/json"
         ],
         "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "description": "ID of user whos products to return",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          },
+          {
+            "name": "productId",
+            "in": "path",
+            "description": "ID of whos product to return",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          },
           {
             "in": "body",
             "name": "title",
@@ -305,7 +319,7 @@
             "description": "Invalid ID supplied"
           },
           "404": {
-            "description": "Calendar not found"
+            "description": "User or Calendar not found"
           }
         },
         "security": [
@@ -313,6 +327,58 @@
             "api_key": []
           }
         ]
+      },
+      "patch": {
+        "tags": [
+          "calendar"
+        ],
+        "summary": "Update calendar",
+        "description": "",
+        "operationId": "updateCalendar",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "description": "ID of user whos calendars to return",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          },
+          {
+            "name": "calendarId",
+            "in": "path",
+            "description": "Update calendar",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          },
+          {
+            "in": "body",
+            "name": "title",
+            "description": "Calendar title",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Calendar"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/Calendar"
+            }
+          },
+          "400": {
+            "description": "Invalid calendar"
+          },
+          "404": {
+            "description": "User or Calendar not found"
+          }
+        }
       }
     },
     "/calendar/{productId}": {
@@ -354,49 +420,9 @@
           },
           "400": {
             "description": "Invalid calendar"
-          }
-        }
-      }
-    },
-    "/calendar/{calendarId}": {
-      "patch": {
-        "tags": [
-          "calendar"
-        ],
-        "summary": "Update calendar",
-        "description": "",
-        "operationId": "updateCalendar",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "calendarId",
-            "in": "path",
-            "description": "Update calendar",
-            "required": true,
-            "type": "integer",
-            "format": "int64"
           },
-          {
-            "in": "body",
-            "name": "title",
-            "description": "Calendar title",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/Calendar"
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "successful operation",
-            "schema": {
-              "$ref": "#/definitions/Calendar"
-            }
-          },
-          "400": {
-            "description": "Invalid calendar"
+          "404": {
+            "description": "Product not found"
           }
         }
       }
@@ -407,7 +433,7 @@
           "activity"
         ],
         "summary": "Get calendar activities list for period",
-        "description": "",
+        "description": "page && per_page parameters not used now",
         "operationId": "getActivities",
         "produces": [
           "application/json"
@@ -425,14 +451,14 @@
             "name": "from",
             "in": "query",
             "description": "Activities from date time",
-            "required": false,
+            "required": true,
             "type": "string"
           },
           {
             "name": "to",
             "in": "query",
             "description": "Activities to date time",
-            "required": false,
+            "required": true,
             "type": "string"
           },
           {
@@ -461,6 +487,9 @@
           },
           "400": {
             "description": "Invalid calendar"
+          },
+          "404": {
+            "description": "Calendar not found"
           }
         }
       },
@@ -499,6 +528,9 @@
           },
           "400": {
             "description": "Invalid calendar"
+          },
+          "404": {
+            "description": "Calendar not found"
           }
         }
       }
@@ -581,6 +613,9 @@
           },
           "400": {
             "description": "Invalid calendar"
+          },
+          "404": {
+            "description": "Activity not found"
           }
         }
       }
@@ -670,7 +705,7 @@
         "title": {
           "type": "string"
         },
-        "userId": {
+        "user_id": {
           "type": "integer",
           "format": "int64",
           "default": null
@@ -696,7 +731,7 @@
         "title": {
           "type": "string"
         },
-        "productId": {
+        "product_id": {
           "type": "integer",
           "format": "int64",
           "default": null
@@ -758,7 +793,7 @@
           "type": "string",
           "default": null
         },
-        "calendarId": {
+        "calendar_id": {
           "type": "integer",
           "format": "int64",
           "default": null
